[gd_scene load_steps=10 format=3 uid="uid://dbdojrj5biuof"]

[ext_resource type="Script" path="res://Scripts/GD_TestArea.gd" id="1_vmv42"]
[ext_resource type="PackedScene" uid="uid://bau0x75vdgeq2" path="res://Scenes/SC_Screen.tscn" id="2_nobob"]
[ext_resource type="PackedScene" uid="uid://dc8ga3owcebxo" path="res://Models/box.blend" id="3_m7y05"]
[ext_resource type="Script" path="res://Scripts/GD_Steam.gd" id="4_qru8n"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h2hkh"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_h7fiu"]
sky_material = SubResource("ProceduralSkyMaterial_h2hkh")

[sub_resource type="Environment" id="Environment_ng8yv"]
background_mode = 2
sky = SubResource("Sky_h7fiu")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_taaxv"]
albedo_color = Color(0.308232, 0.260933, 0.215952, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q1oow"]
albedo_color = Color(0.47788, 0.47788, 0.47788, 1)

[node name="Main" type="Node"]
script = ExtResource("1_vmv42")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ng8yv")

[node name="Objects" type="Node" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Objects"]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)
use_collision = true
material = SubResource("StandardMaterial3D_taaxv")

[node name="CSGBox3D2" type="CSGBox3D" parent="Objects"]
transform = Transform3D(100, 0, 0, 0, 10, 0, 0, 0, 2, 0, 0, -51)
use_collision = true
material = SubResource("StandardMaterial3D_taaxv")

[node name="CSGBox3D4" type="CSGBox3D" parent="Objects"]
transform = Transform3D(-4.37114e-06, 0, 2, 0, 10, 0, -100, 0, -8.74228e-08, -51, 0, 0)
use_collision = true
material = SubResource("StandardMaterial3D_taaxv")

[node name="CSGBox3D6" type="CSGBox3D" parent="Objects"]
transform = Transform3D(-4.37114e-06, 0, 2, 0, 10, 0, -100, 0, -8.74228e-08, 50, 0, 0)
use_collision = true
material = SubResource("StandardMaterial3D_taaxv")

[node name="CSGBox3D5" type="CSGBox3D" parent="Objects"]
transform = Transform3D(100, 0, 0, 0, 10, 0, 0, 0, 2, 0, 0, 52)
use_collision = true
material = SubResource("StandardMaterial3D_taaxv")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 65.7571, 8.45539, 0)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(4, 0, 0, 0, 2.7, 0, 0, 0, 20, -38.7697, 2.45539, 0)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(3.4641, 0, 10, 0, 2.7, 0, -2, 0, 17.3205, -33.9533, 2.45539, -12)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="CSGCylinder3D5" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(-1.6359, 0, 1.5, 0, 1.35, 0, 0.944487, 0, 2.59808, 4, 1.45539, -1)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="CSGCylinder3D6" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(-1.6359, 0, 1.5, 0, 1.35, 0, 0.944487, 0, 2.59808, 7, 1.45539, -1)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Objects"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 64.8482, 8.32266, -24.9698)
use_collision = true
material = SubResource("StandardMaterial3D_q1oow")

[node name="SC_Screen" parent="." instance=ExtResource("2_nobob")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="box" parent="." instance=ExtResource("3_m7y05")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8133, 0.5, 12.4073)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Host" type="Button" parent="CanvasLayer"]
offset_right = 209.0
offset_bottom = 112.0
text = "HOST GAME"

[node name="Refresh" type="Button" parent="CanvasLayer"]
offset_top = 150.0
offset_right = 209.0
offset_bottom = 262.0
text = "Refresh"

[node name="LobbyContainer" type="ScrollContainer" parent="CanvasLayer"]
offset_left = 371.0
offset_top = 39.0
offset_right = 916.0
offset_bottom = 448.0

[node name="Lobbies" type="VBoxContainer" parent="CanvasLayer/LobbyContainer"]
layout_mode = 2

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")

[node name="Steam" type="Node" parent="."]
script = ExtResource("4_qru8n")

[connection signal="pressed" from="CanvasLayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Refresh" to="." method="_on_refresh_pressed"]
